2006-02-28  Richard Sandiford  <richard@codesourcery.com>

	* ld-i386/emit-relocs.s, ld-i386/emit-relocs.d: New test.
	* ld-i386/i386.exp: Run it.

2006-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-pie/weakundef-data.c: Fix the typo.

2006-02-22  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-pie/pie.c: New file.

	* ld-pie/pie.exp: Check if compiler supports -pie.

2006-02-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/2218
	* ld-pie/pie.exp: Add the weak undefined data test.

	* ld-pie/weakundef-data.c: New file.

2006-02-17  Shrirang Khisti  <shrirangk@kpitcummins.com>
	    Anil Paranjape   <anilp1@kpitcummins.com>
	    Shilin Shakti    <shilins@kpitcummins.com>

	* ld-xc16x: New directory.
	* ld-xc16x/absrel.d: New file.
	* ld-xc16x/absrel.s: New file.
	* ld-xc16x/offset.d: New file.
	* ld-xc16x/offset.s: New file.
	* ld-xc16x/pcreloc.d: New file.
	* ld-xc16x/pcreloc.s: New file.
	* ld-xc16x/xc16x.exp: New file.

2006-02-07  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-elf.exp: Add thumb-entry test.
	* ld-arm/thumb-entry.d: New test.
	* ld-arm/thumb-entry.s: New test.

2006-02-04  Richard Sandiford  <richard@codesourcery.com>

	* ld-mips-elf/tls-hidden2a.s, ld-mips-elf/tls-hidden2b.s,
	* ld/testsuite/ld-mips-elf/tls-hidden2.d,
	* ld/testsuite/ld-mips-elf/tls-hidden2-got.d: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2006-02-04  Richard Sandiford  <richard@codesourcery.com>

	* ld-mips-elf/rel32-n32.d: Adjust for changes in linker behaviour.
	* ld-mips-elf/rel32-o32.d: Likewise.
	* ld-mips-elf/rel64.d: Likewise.
	* ld-mips-elf/tls-multi-got-1.got: Likewise.
	* ld-mips-elf/tls-multi-got-1.r: Likewise.
	* ld-mips-elf/tlsdyn-o32-1.d: Likewise.
	* ld-mips-elf/tlsdyn-o32-1.got: Likewise.
	* ld-mips-elf/tlsdyn-o32-2.d: Likewise.
	* ld-mips-elf/tlsdyn-o32-2.got: Likewise.
	* ld-mips-elf/tlsdyn-o32-3.d: Likewise.
	* ld-mips-elf/tlsdyn-o32-3.got: Likewise.
	* ld-mips-elf/tlsdyn-o32.d: Likewise.
	* ld-mips-elf/tlsdyn-o32.got: Likewise.