@@ -1,0 +1,11 @@
+
+Relocation section '\.rel\.plt' at offset 0x1218 contains 2 entries:
+ Offset     Info    Type            Sym\.Value  Sym\. Name
+0008110c  00000507 R_386_JUMP_SLOT   00000000   sexternal
+00081110  00000807 R_386_JUMP_SLOT   00080427   sglobal
+
+Relocation section '\.rel\.dyn' at offset 0x1200 contains 3 entries:
+ Offset     Info    Type            Sym\.Value  Sym\. Name
+00080403  00000601 R_386_32          00000000   __GOTT_BASE__
+00080409  00000701 R_386_32          00000000   __GOTT_INDEX__
+00081114  00000406 R_386_GLOB_DAT    00080000   x
