@@ -1,0 +1,20 @@
+
+Relocation section '\.rel\.plt' at offset .* contains 2 entries:
+ Offset     Info    Type            Sym\.Value  Sym\. Name
+0008110c  .*07 R_386_JUMP_SLOT   00000000   sglobal
+00081110  .*07 R_386_JUMP_SLOT   00000000   foo
+
+Relocation section '\.rel\.text' at offset .* contains 3 entries:
+ Offset     Info    Type            Sym.Value  Sym. Name
+00080301  .*04 R_386_PLT32       00080200   .plt
+00080306  .*04 R_386_PLT32       0008030f   sexternal
+0008030b  .*04 R_386_PLT32       00080200   .plt
+
+Relocation section '\.rel\.plt\.unloaded' at offset .* contains 6 entries:
+ Offset     Info    Type            Sym\.Value  Sym\. Name
+00080202  .*01 R_386_32          00081100   _GLOBAL_OFFSET_TABLE_
+00080208  .*01 R_386_32          00081100   _GLOBAL_OFFSET_TABLE_
+00080212  .*01 R_386_32          00081100   _GLOBAL_OFFSET_TABLE_
+0008110c  .*01 R_386_32          00080200   _PROCEDURE_LINKAGE_TAB.*
+00080222  .*01 R_386_32          00081100   _GLOBAL_OFFSET_TABLE_
+00081110  .*01 R_386_32          00080200   _PROCEDURE_LINKAGE_TAB.*
