@@ -1,5 +1,12 @@
 2006-02-28  Richard Sandiford  <richard@codesourcery.com>
 
+	* ld-i386/vxworks1-lib.s, ld-i386/vxworks1-lib.dd,
+	* ld-i386/vxworks1-lib.rd, ld-i386/vxworks1.s, ld-i386/vxworks1.dd,
+	* ld-i386/vxworks1.rd, ld-i386/vxworks1.ld: New test.
+	* ld-i386/i386.exp: Run it.
+
+2006-02-28  Richard Sandiford  <richard@codesourcery.com>
+
 	* ld-i386/emit-relocs.s, ld-i386/emit-relocs.d: New test.
 	* ld-i386/i386.exp: Run it.
 
